# es-timeslicer

./: Dockerfile  README.md  post4docker.py  pyproject.toml  run_script.py  setup.py
docker_test/scripts/: create.sh  destroy.sh
src/: agg_function.txt  local_test.py  query.json
src/es_timeslicer/: cli.py  defaults.py  exceptions.py  main.py  version.py
src/es_timeslicer/helpers/: client.py  commands.py  logging.py  utils.py
