[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "es-timeslicer"
dynamic = ["version"]
description = 'Aggregate existing data by user-definable time slices.'
readme = "README.md"
requires-python = ">=3.8"
license = { text="Apache-2.0" }
keywords = ['elasticsearch', 'index', 'stats', 'aggregations']
authors = [{ name="Elastic", email="info@elastic.co" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "es_client==8.11.0",
    "ecs-logging==2.1.0",
    "six>=1.16.0",
]

[project.optional-dependencies]
test = [
    "requests",
    "pytest >=7.2.1",
    "pytest-cov",
]
doc = ["sphinx", "sphinx_rtd_theme"]

[tool.hatch.module]
name = "es-timeslicer"

[project.scripts]
es-timeslicer = "es_timeslicer.cli:run"

[project.urls]
Documentation = "https://github.com/untergeek/es-timeslicer#readme"
Issues = "https://github.com/untergeek/es-timeslicer/issues"
Source = "https://github.com/untergeek/es-timeslicer"

[tool.hatch.version]
path = "src/es_timeslicer/version.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/es_timeslicer tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["es_timeslicer"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["es_timeslicer", "tests"]
branch = true
parallel = true
omit = [
  "src/es_timeslicer/__about__.py",
]

[tool.coverage.paths]
es_timeslicer = ["src/es_timeslicer", "*/es-timeslicer/src/es_timeslicer"]
tests = ["tests", "*/es-timeslicer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
